// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckBoxInput renders a disabled input 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 erdTQn"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 hYLvQc"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 ctdetp FormField__FormFieldBox-sc-m9hood-0 casIFC CheckBoxInput__StyledFormField-sc-16fe619-0 jlzBsc"
      tabindex="0"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 fzAqvK FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 gofNHd"
          disabled=""
          label="Some input"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 kNcvZs StyledCheckBox-sc-1dbk5ju-6 bWiGFS"
            disabled=""
          >
            <input
              class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dfUkHI"
              disabled=""
              tabindex="-1"
              type="checkbox"
              value="Hi people"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 ceoxCm StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 jjIPKl"
              disabled=""
            />
          </div>
          <span>
            Some input
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`CheckBoxInput renders a simple input 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 erdTQn"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 hYLvQc"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 ctdetp FormField__FormFieldBox-sc-m9hood-0 casIFC CheckBoxInput__StyledFormField-sc-16fe619-0 jlzBsc"
      tabindex="0"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 fzAqvK FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 kmrNSU"
          label="Some input"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 kNcvZs StyledCheckBox-sc-1dbk5ju-6 bWiGFS"
          >
            <input
              class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 hZdeBk"
              tabindex="-1"
              type="checkbox"
              value="Hi people"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 ceoxCm StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 jjIPKl"
            />
          </div>
          <span>
            Some input
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`CheckBoxInput renders a toggle input 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 erdTQn"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 hYLvQc"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 ctdetp FormField__FormFieldBox-sc-m9hood-0 casIFC CheckBoxInput__StyledFormField-sc-16fe619-0 jlzBsc"
      tabindex="0"
    >
      <label
        class="StyledText-sc-1sadyjn-0 icUwKR"
      >
        A checkbox
      </label>
      <span
        class="StyledText-sc-1sadyjn-0 eASVNJ"
      >
        A helpful message
      </span>
      <div
        class="StyledBox-sc-13pk1d4-0 fzAqvK FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 kmrNSU"
          label="Hi friends"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 kNcvZs StyledCheckBox-sc-1dbk5ju-6 bWiGFS"
          >
            <input
              class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 hZdeBk"
              tabindex="-1"
              type="checkbox"
            />
            <span
              class="StyledCheckBox__StyledCheckBoxToggle-sc-1dbk5ju-4 fOdePD"
            >
              <span
                class="StyledCheckBox__StyledCheckBoxKnob-sc-1dbk5ju-5 jOejkI"
              />
            </span>
          </div>
          <span>
            Hi friends
          </span>
        </label>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 drMgMi"
      >
        Some info
      </span>
    </div>
  </div>
</div>
`;

exports[`CheckBoxInput renders an input with a form field label 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 erdTQn"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 hYLvQc"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 ctdetp FormField__FormFieldBox-sc-m9hood-0 casIFC CheckBoxInput__StyledFormField-sc-16fe619-0 jlzBsc"
      tabindex="0"
    >
      <label
        class="StyledText-sc-1sadyjn-0 icUwKR"
      >
        A brilliant input
      </label>
      <div
        class="StyledBox-sc-13pk1d4-0 fzAqvK FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 kmrNSU"
          label="Some input"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 kNcvZs StyledCheckBox-sc-1dbk5ju-6 bWiGFS"
          >
            <input
              class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 hZdeBk"
              tabindex="-1"
              type="checkbox"
              value="Hi people"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 ceoxCm StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 jjIPKl"
            />
          </div>
          <span>
            Some input
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`CheckBoxInput renders an input with a help message 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 erdTQn"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 hYLvQc"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 ctdetp FormField__FormFieldBox-sc-m9hood-0 casIFC CheckBoxInput__StyledFormField-sc-16fe619-0 jlzBsc"
      tabindex="0"
    >
      <span
        class="StyledText-sc-1sadyjn-0 eASVNJ"
      >
        This is a very cool input
      </span>
      <div
        class="StyledBox-sc-13pk1d4-0 fzAqvK FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 kmrNSU"
          label="Some input"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 kNcvZs StyledCheckBox-sc-1dbk5ju-6 bWiGFS"
          >
            <input
              class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 hZdeBk"
              tabindex="-1"
              type="checkbox"
              value="Hi people"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 ceoxCm StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 jjIPKl"
            />
          </div>
          <span>
            Some input
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`CheckBoxInput renders an input with a validation error 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 erdTQn"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 hYLvQc"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 ctdetp FormField__FormFieldBox-sc-m9hood-0 casIFC CheckBoxInput__StyledFormField-sc-16fe619-0 jlzBsc"
      tabindex="0"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 fzAqvK FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 kmrNSU"
          label="Some input"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 kNcvZs StyledCheckBox-sc-1dbk5ju-6 bWiGFS"
          >
            <input
              class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 hZdeBk"
              tabindex="-1"
              type="checkbox"
              value="Hi people"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 ceoxCm StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 jjIPKl"
            />
          </div>
          <span>
            Some input
          </span>
        </label>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 fbPnYz"
      >
        You failed at this
      </span>
    </div>
  </div>
</div>
`;

exports[`CheckBoxInput renders an input with an info message 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 erdTQn"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 hYLvQc"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 ctdetp FormField__FormFieldBox-sc-m9hood-0 casIFC CheckBoxInput__StyledFormField-sc-16fe619-0 jlzBsc"
      tabindex="0"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 fzAqvK FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 kmrNSU"
          label="Some input"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 kNcvZs StyledCheckBox-sc-1dbk5ju-6 bWiGFS"
          >
            <input
              class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 hZdeBk"
              tabindex="-1"
              type="checkbox"
              value="Hi people"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 ceoxCm StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 jjIPKl"
            />
          </div>
          <span>
            Some input
          </span>
        </label>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 drMgMi"
      >
        You can set a cool value
      </span>
    </div>
  </div>
</div>
`;
